2021-08-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-vtermprocess): new function.
	(eepitch-vterm): use `find-vtermprocess'.

2021-08-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-wget-elisp): new function.
	(find-wgeta-elisp): new function.

2021-08-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (ee-find-callprocess00-exit-status): new variable.
	(find-callprocess00-ne): use `ee-find-callprocess00-exit-status'.
	(find-wget): use `ee-find-callprocess00-exit-status'.
	(find-wgeta): new function.

2021-07-09  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): new function.
	(find-git-links): added "-" to the list of characters that are
	deleted to form the "{c}" argument to `code-c-d'.

2021-06-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tla.el (find-pdf-txt, find-pdf-txt-links)
	(ee-fnamepdf-to-fnametxt, find-pdf-text-insert): new functions.

	* eev-audiovideo.el (ee-find-mpv-audio): use "--start=mm:ss"
	instead of "--start mm:ss" (thanks to Erich Ruff for the bug fix!)

2021-06-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-find-xpdf-colon): new variable.
	(ee-find-xpdf-colon): new function.
	(ee-find-xpdf-page): use `ee-find-xpdf-colon'.
	(find-mupdf-page, ee-find-mupdf-page): new functions.
	(ee-find-mupdf-page-options): new variable.

	* eev-blinks.el (ee-struct-class, ee-struct-slot-names)
	(ee-struct-slot-names+, ee-struct-index-table)
	(ee-struct-to-string, find-estruct): new functions.

2021-06-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-compose-hash.el: new file.

	* eev-blinks.el (ee-hashtable-to-string, find-ehashtable): new
	functions.

2021-05-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdf-page): make it an alias to
	`find-xpdf-page'. Also, the comments in "eev-pdflike.el" now say
	that the recommened a way to change the default viewer is with a
	`defalias'; before this change the recommended way was with a