@@ -90,6 +90,8 @@
 ;; «.find-eeit-links»			(to "find-eeit-links")
 ;; «.find-texlive-links»		(to "find-texlive-links")
 ;; «.find-newbrowser-links»		(to "find-newbrowser-links")
+;; «.ee-0x0-upload-region»		(to "ee-0x0-upload-region")
+;; «.find-0x0-links»			(to "find-0x0-links")
 
 
 (require 'eev-env)
@@ -2299,6 +2301,71 @@ sudo ./install-tl -select-repository
 ;; (find-{browser}-page \"~/Coetzee99.pdf\")
 ;; (find-{browser}-page \"~/Coetzee99.pdf\" 3)
 ;; (find-pdf-page \"~/Coetzee99.pdf\" 3)
+")
+     )
+   pos-spec-list))
+
+
+
+
+;;;   ___        ___  
+;;;  / _ \__  __/ _ \ 
+;;; | | | \ \/ / | | |
+;;; | |_| |>  <| |_| |
+;;;  \___//_/\_\\___/ 
+;;;                   
+;; «ee-0x0-upload-region»  (to ".ee-0x0-upload-region")
+;; Needs: https://melpa.org/#/0x0
+;;   See: https://lists.gnu.org/archive/html/eev/2021-08/msg00000.html
+;;
+(defvar ee-0x0-url nil
+  "The last URL generated by a call to `ee-0x0-upload-region'.")
+
+(defun ee-0x0-upload-region (b e)
+  "Upload the current region to 0x0 and show some elisp hyperlinks.
+I use this mainly on IRC chats, to send elisp snippets to people
+who use eev. I use this function aliased to `u0', with:
+
+  (defalias 'u0 'ee-0x0-upload-region)
+
+If I mark the region with the snippet and run `M-x u0', `u0'
+uploads the snippet to https://0x0.st/ and shows some sexps in a
+temporary buffer; the two main sexps in that temporary buffer
+there will be things like:
+
+  (find-wget \"https://0x0.st/-J1W.el\")
+  (find-wget-elisp \"https://0x0.st/-J1W.el\")
+
+The one that starts with `find-wget-elisp' downloads the URL with
+wget and runs `emacs-lisp-mode' on the resulting \"*wget: URL*\"
+buffer. If the other person on IRC is using some IRC client that
+runs in Emacs I can send the find-wget-elisp sexp to her and she
+only needs to type `M-e' on it to access the elisp code that I
+sent."
+  (interactive "r")
+  (0x0-upload b e '0x0)
+  (setq ee-0x0-url (ee-last-kill))
+  (find-0x0-links))
+
+
+;; «find-0x0-links»  (to ".find-0x0-links")
+;; Skel: (find-find-links-links-new "0x0" "url" "")
+;;
+(defun find-0x0-links (&optional url &rest pos-spec-list)
+"Visit a temporary buffer containing hyperlinks to an upload to 0x0.st.
+This function is used by `ee-0x0-upload-region'."
+  (interactive)
+  (setq url (or url ee-0x0-url))
+  (apply
+   'find-elinks
+   `((find-0x0-links ,url ,@pos-spec-list)
+     (find-0x0-links "{url}" ,@pos-spec-list)
+     ;; Convention: the first sexp always regenerates the buffer.
+     (find-efunction 'find-0x0-links)
+     ""
+     ,(ee-template0 "\
+(find-wget \"{url}\")
+(find-wget-elisp \"{url}\")
 ")
      )
    pos-spec-list))
